# aocpp-2021

./: .gitignore
src/: CMakeLists.txt  data.hpp  day1.cpp  day1.hpp  day2.cpp  day2.hpp  main.cpp
test/: CMakeLists.txt  day1_tests.cpp
